--- a/about.html
+++ b/about.html
@@ -16,8 +16,8 @@
             </ul>
         </nav>
         <div class="content">
-            <h1>Welcome to Cue!</h1>
-            <p>Cue helps make websites dynamic by loading new pages without refreshing the browser window. You can attach fun CSS3 and JavaScript animations to add some flair.</p>
+            <h1>About</h1>
+            <p>This is the about page. A description of the inner workings of my mind, I mean code, will go here.</p>
         </div>
     </div>
     <script type="text/javascript" src="js/cue.js"></script>
