Added jQuery load for ajax calls, added styling and sample pages

--- a/about.html
+++ b/about.html
@@ -1,25 +1,28 @@
+
 <!doctype html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Cue</title>
+    <title>About</title>
     <link rel="stylesheet" href="css/cue.css">
 </head>
 <body>
-
+    <div class="navigation">
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="services.html">Services</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+    </div>
     <div class="stage">
-        <nav>
-            <ul>
-                <li><a href="indx.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
         <div class="content">
             <h1>About</h1>
-            <p>This is the about page. A description of the inner workings of my mind, I mean code, will go here.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora, quod, architecto, voluptate deleniti nulla dolores ipsum eius repellat minus libero nostrum quia inventore consectetur reprehenderit quas tenetur modi expedita laudantium!</p>
         </div>
     </div>
+    <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script type="text/javascript" src="js/cue.js"></script>
 </body>
 </html>
