--- a/services.html
+++ b/services.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Home</title>
+    <title>Services</title>
     <link rel="stylesheet" href="css/cue.css">
 </head>
 <body>
@@ -17,8 +17,8 @@
     </div>
     <div class="stage">
         <div class="content">
-            <h1>Welcome to Cue!</h1>
-            <p>Cue helps make websites dynamic by loading new pages without refreshing the browser window. You can attach fun CSS3 and JavaScript animations to add some flair.</p>
+            <h1>Services</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora, quod, architecto, voluptate deleniti nulla dolores ipsum eius repellat minus libero nostrum quia inventore consectetur reprehenderit quas tenetur modi expedita laudantium!</p>
         </div>
     </div>
     <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
